// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="#geo-alt-fill"
        />
      </svg>
      <p
        class="d-inline-block mb-0"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      <p
        class="mb-4"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      First title label
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Second title label
      </p>
    </dt>
    <dd>
      <p
        class="mb-4"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      
          Only title label
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dd>
      Description text goes here.
    </dd>
  </dl>
</jest>
`;

exports[`OE - Description List renders correctly 2`] = `
<jest>
  <dl>
    <div
      class="row"
    >
      <dt
        class="col col-md-3"
      >
        <svg
          class="me-2 bi icon--xs"
        >
          <use
            xlink:href="#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-4 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd
        class="col col-md-9"
      >
        <p
          class="mb-4"
        >
          Description text goes here.
        </p>
      </dd>
    </div>
    <div
      class="row"
    >
      <div
        class="col col-md-3"
      >
        <dt>
          <p
            class="mb-0"
          >
            First title label
          </p>
        </dt>
        <dt>
          <svg
            class="me-2 bi icon--xs"
          >
            <use
              xlink:href="#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-4 d-inline-block"
          >
            Second title label
          </p>
        </dt>
      </div>
      <dd
        class="col col-md-9"
      >
        <p
          class="mb-4"
        >
          Description text goes here.
        </p>
      </dd>
    </div>
    <div
      class="row"
    >
      <dt
        class="col col-md-3"
      >
        
          Only title label
      </dt>
      <div
        class="col col-md-9"
      >
        <dd>
          Description text goes here.
        </dd>
        <dd>
          Description text goes here.
        </dd>
      </div>
    </div>
  </dl>
</jest>
`;
